минорные допилы кода